--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run start:react\" \"npm run start:json-server\"",
+    "start:react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:json-server": "npx json-server --watch db.json --port 5000",
+    "stop": "./kill-ports.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
+    "json-server": "^1.0.0-beta.2",
     "tailwindcss": "^3.4.10"
   }
 }
