--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
@@ -24,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:json-server": "npx json-server --watch db.json --port 5000",
+    "start:json-server": "npx json-server --watch db.json --port 5001",
     "stop": "./kill-ports.sh"
   },
   "eslintConfig": {
