--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
